--- a/argo.yml
+++ b/argo.yml
@@ -1,5 +1,5 @@
 apiVersion: argoproj.io/v1alpha1
-kind: Application
+kind: Application #bo
 metadata:
   name: argocd
   namespace: argocd
@@ -9,7 +9,7 @@ spec:
     namespace: dev
     server: https://kubernetes.default.svc
   source:
-    path: /configs
+    path: ./configs
     repoURL: "https://github.com/AliHaine/ayagmur-ception"
   syncPolicy:
     automated:
