try with node port

--- a/ingress.yml
+++ b/ingress.yml
@@ -1,17 +1,14 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: v1
+kind: Service
 metadata:
-  name: main-ingress
+  name: will
   namespace: dev
 spec:
-  ingressClassName: traefik
-  rules:
-  - http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: will
-            port:
-              number: 8888
+  type: NodePort
+  selector:
+    app: will
+  ports:
+    - protocol: TCP
+      port: 8888
+      targetPort: 8888
+      nodePort: 31888
