--- a/app.yml
+++ b/app.yml
@@ -4,13 +4,14 @@ metadata:
   name: will
   namespace: dev
 spec:
+  type: NodePort
   selector:
     app: will
   ports:
     - protocol: TCP
       port: 8888
       targetPort: 8888
-
+      nodePort: 31888
 ---
 
 apiVersion: apps/v1
